:necktie: integration in home page

--- a/src/config/translations/resources/en.json
+++ b/src/config/translations/resources/en.json
@@ -27,5 +27,8 @@
     "HOME_PAGE": "Home",
     "SEARCH_PAGE": "Search",
     "SETTING_PAGE":  "Setting"
+  },
+  "home": {
+    "feels-like": "Feels like {{temp}}"
   }
 }
